# PyMassSpec

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  regen_mpl_baseline.sh  repo_helper.yml  requirements.txt  setup.cfg  setup.py  sort_hashes_json.py  stubs.txt  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/workflows/: conda_ci.yml  flake8.yml  mypy.yml  notebooks.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: 40_peak_detection_and_representation.rst  50_peak_alignment_by_dynamic_programming.rst  conf.py  contributing.rst  ignore_missing_xref.py  index.rst  ipynb2rst.py  license.rst  requirements.txt
doc-source/demo_rst/: DPA.rst
pyms/: Base.py  BillerBiemann.py  Display.py  Experiment.py  IntensityMatrix.py  IonChromatogram.py  Mixins.py  Simulator.py  Spectrum.py  TopHat.py  __init__.py  eic.py
pyms-demo/jupyter/: BaselineCorrection.ipynb  DPA.ipynb  Display_User_Interaction.ipynb  Displaying_Detected_Peaks.ipynb  Displaying_Mass_Spec.ipynb  Displaying_Multiple_IC.ipynb  Displaying_TIC.ipynb  Experiment.ipynb  IntensityMatrix.ipynb  IntensityMatrix_Preprocessing.ipynb  IntensityMatrix_Resizing.ipynb  IonChromatogram.ipynb  MassSpectrum.ipynb  Multiple_Experiments.ipynb  NoiseSmoothing.ipynb  Peak.ipynb  Peak_Area_Estimation.ipynb  Peak_Detection.ipynb  Peak_Filtering_Noise_Analysis.ipynb  comparing_datasets.ipynb  reading_andi.ipynb  reading_jcamp.ipynb
pyms/DPA/: Alignment.py  IO.py  PairwiseAlignment.py  clustering.py
pyms/GCMS/: Class.py  Function.py
pyms/GCMS/IO/: ANDI.py  JCAMP.py  MZML.py
pyms/Gapfill/: Class.py  Function.py
pyms/Noise/: Analysis.py  SavitzkyGolay.py  Window.py
pyms/Peak/: Class.py  Function.py
pyms/Peak/List/: Function.py  IO.py
pyms/Utils/: IO.py  Math.py  Utils.py  jcamp.py
tests/: conftest.py  image_hashes.json  image_hashes_313.json  image_hashes_37.json  image_hashes_38.json  requirements.txt  setup.cfg  test_ANDI.py  test_BillerBiemann.py  test_DPA.py  test_Display.py  test_IntensityMatrix.py  test_IonChromatogram.py  test_JCAMP.py  test_MassSpectrum.py  test_Scan.py  test_Utils_Math.py  test_mzml.py
tests/data/: aa_4_aq_110124_056.func_0.JDX
tests/test_JCAMP_/: test_jcamp_reader_empty_scan.yml
tests/test_mzml_/: test_mzml_reader.yml
tests/test_noise/: test_SavitzkyGolay.py
tests/test_peak/: test_Function.py  test_List.py  test_Peak.py
